mule-user-guide/v/3.5/flow-processing-strategies.adoc
= 流程处理策略

流*processing strategy*确定Mule如何实现给定流的消息处理。

* 消息是应该同步处理（在同一个线程上）还是异步处理（在不同的线程上）？
* 如果是异步的，用于处理消息的线程池的属性是什么？
* 如果是异步的，消息如何等待轮到它在第二个线程中被处理？

所有Mule流都有一个隐含的处理策略，Mule会自动应用：同步或排队异步。这些处理策略中的每一个对于某些流程都是最佳的本页介绍这些处理策略和Mule用于确定每个流程的最佳处理策略的标准。

该页面还解释了您可能希望忽略Mule处理策略选择的情况，并介绍了您可以更改或微调用于给定流程的处理策略的参数。

== 假设

本页假定您熟悉 link:/mule-user-guide/v/3.5/mule-concepts[骡流]和基本 link:/mule-user-guide/v/3.5/mule-application-architecture[应用架构]。

== 隐式处理策略

即使您没有为您的流程配置处理策略，流程也会遵循由Mule自动应用的处理策略。处理策略是：

*  <<The Synchronous Flow Processing Strategy>>：Mule在一个线程中处理消息。
*  <<The Queued-Asynchronous Flow Processing Strategy>>：Mule使用一个队列将接收线程与流程的其余部分分开。

对于大多数用例，Mule选择的隐式策略是最优的。有关为什么以及如何覆盖隐式处理策略的更多信息，请参阅<<Changing the Processing Strategy>>，如果您的用例需要它。

=== 骡子如何选择流程处理策略

与排队异步替代方案的高吞吐量相比，每个流程可以从同步处理的事务可靠性中获益的程度不同。

Mule根据两个标准为流程选择一个处理策略：

. 流的交换模式
. 流是否是事务性的

流量采用两种交换模式中的一种，由流入端点的交换模式确定：

当消息的发送者（即流的入站端点）期望响应或某种结果返回给调用者时，将使用*  a **request-response exchange pattern**。
*  a **one-way exchange pattern**用于没有预期的响应时，或者当结果发送给其他流或系统而不返回给调用者时。

如果交换模式是请求 - 响应，则Mule应用同步处理策略。

另外，无论交换模式如何，一些入站端点可以配置为操作 link:/mule-user-guide/v/3.5/transaction-management[事务]。如果一个流是事务性的，Mule会应用一个同步处理策略。

下表总结了Mule如何选择流程处理策略：

[%header%autowidth.spread]
|===
|交易模式 |交易？ |流程处理策略
|请求响应 |是 |同步
|请求响应 |否 |同步
|单向 |是 |同步
|单向 |否 |排队的异步
|===

=== 同步流程处理策略

同步方法用于处理最初接收消息的同一线程中的消息。在流接收到消息后，包括响应处理在内的所有处理都将在同一个线程中完成（异步范围例外，如Async和For Each）。同步策略非常适合以下情况：

* 邮件的发件人需要回复。这被称为"request-response"交换模式。
* 流程需要满足事务处理的要求。换句话说，流程中的所有步骤都被视为一个单元，它必须完全成功或完全失败。此外，必须通知适当的各方（例如消息的发送者或由流封装的业务流程的管理员）的结果。这意味着事务流程不能将处理交给其他线程，在事务完成后可能发生错误。
* 必须通知流程入站端点处理消息期间发生的所有错误。这种情况在 link:/mule-user-guide/v/3.5/reliability-patterns[可靠性模式]中进一步讨论。 +

=== 排队异步流处理策略

排队异步方法使用队列将流的接收器与流中其余步骤分离。

image:non-blocking-queued-async.png[非阻塞排队-异步]

这意味着一旦接收者将消息放入队列中，它可以立即返回并接受新的传入消息。而且，队列中等待的每个消息都可以从一个线程池中分配一个不同的线程。称为工作管理器的组件将未决消息分配给可用线程，因此可以并行处理它们。这种并行处理非常适用于接收器可以在高峰时间接收消息的情况，其速度明显快于其余流程可以处理这些消息的情况。

但是，异步方法所促成的吞吐量增加是以事务可靠性为代价的。

[NOTE]
为排队异步流处理策略实现的特定类型的队列被称为SEDA队列。

[WARNING]
====
*Behavior in a Cluster*

具有排队异步处理策略的流可以在集群中的任何节点上执行。

具有同步处理策略的流程在集群的同一节点上执行，直到流程中的处理完成。
====

== 更改处理策略

Mule对加工策略的选择对于其应用的流程几乎总是最优的。但是，以下选项存在：

* 在Mule为流选择排队异步处理的情况下，您可以*specify a synchronous flow instead*。您可能需要指定一个同步流程来实现可靠性。请记住，同步策略非常适用于流程入站端点必须被通知在处理消息期间发生的所有错误的流程。 link:/mule-user-guide/v/3.5/reliability-patterns[可靠性模式]文件进一步讨论了这种情况。虽然这不适用于大多数用例，但如果Mule为流选择了排队异步处理，则可以指定另一种异步处理策略。您不能在同步流程上强制排队异步处理策略。

* 您可以接受Mule对排队异步流程处理策略的选择，但接受*fine-tune the processing strategy*。请注意，您无法对同步流程进行任何微调。

* 您可以将同步流中的一个或多个消息处理器封装在*{{0}}*中，以定义Mule与主流异步处理的处理块。您也可以通过在异步范围中封装流引用来创建异步流。

* 无论处理策略应用于触发流程如何，您都可以呼叫子流程（始终同步处理）或来自任何流程的同步流程。触发流程等待，直到该同步处理块在继续处理之前返回消息。有关子流和同步流的更多信息，请参阅 link:/mule-user-guide/v/3.5/flows-and-subflows[流量和子流量]。

* 您可以创建一个*custom flow processing strategy*以满足您的确切需求。例如，您可能更喜欢使用增加的线程数来处理高峰负载的排队异步流。

==== 摘要

[%header%autowidth.spread]
|===
| Mule隐含应用的流程处理策略 |您可以指定一个不同的+
处理策略？ |您可以微调+吗？
处理策略？ |您是否可以创建一个处理模块，使用与主流不同的处理策略执行？ |您是否可以使用Spring来应用自定义处理策略？
| *Synchronous*  | *No.*您不能强制请求 - 响应交换模式和/或事务性流程异步。 | *No* 。您无法微调同步处理策略。但是，您可以自定义入站端点连接器接收器 link:/mule-user-guide/v/3.5/tuning-performance[线程配置文件]。 | *Yes.*您可以使用Async Scope或异步流程使Mule异步处理选定的消息处理器块。 <<Creating an Asynchronous Processing Block>>。 | *Yes.* <<Creating a Custom Processing Strategy>>。
您可以通过显式声明同步处理策略来重写隐式选择的排队异步处理策略（或者，在极少数情况下，可以使用不同类型的异步处理策略）。 <<Specifying a Processing Strategy>>。 | *Yes.*您可以微调排队异步处理策略以满足您的需求。 <<Fine-Tuning a Queued-Asynchronous Processing Strategy>>。 | *Yes.*无论主流的处理策略如何，同步 link:/mule-user-guide/v/3.5/flows-and-subflows[流量或子流量]都会同步处理选定的消息处理器块。 | {{7 }} <<Creating a Custom Processing Strategy>>。
|===

=== 指定处理策略

改变个人流程处理策略的过程很简单。您只能为Mule隐式应用排队异步处理策略的流指定处理策略。因此，只有具有单向交换模式并且不具有事务性的流才可以具有指定的处理策略来覆盖Mule对排队异步处理策略的选择。

指定处理策略的最常见用例是强制一个流程，否则这个流程会被排队 - 异步，而不是同步。要强制同步流，请将`processingStrategy`属性添加到要更改的流并将其设置为`synchronous`。这在下面的代码示例中进行了说明。

[source, xml, linenums]
----
<flow name="asynchronousToSynchronous" processingStrategy="synchronous">
  <vm:inbound-endpoint path="anyUniqueEndpointName" exchange-pattern="one-way"/>
  <vm:outbound-endpoint path="output" exchange-pattern="one-way"/>
</flow>
----

在极少数情况下，您可能希望在流中指定另一种异步处理策略，否则将遵循排队异步处理策略。您可以直接在流配置中声明它，就像在上面的示例中声明同步处理策略一样，也可以创建全局元素并进一步微调处理策略。下表列出了处理策略名称，每个处理策略名称可以被声明为`processingStrategy`属性的值，或者作为全局元素。

[%header%autowidth.spread]
|============
|其他异步处理策略元素/全局元素名称 |描述
| *asynchronous-processing-strategy*  |不适用于大多数用例。与排队异步处理策略相同，只是它不使用队列。只有在出于某种原因不希望处理分布在节点上的情况下才可以使用它。
| *queued-thread-per-processor-processing-strategy*  |不适用于大多数用例。将消息写入队列，然后作用域中的每个处理器按顺序在不同的线程中运行。
| *thread-per-processor-processing-strategy*  |不适用于大多数用例。范围中的每个处理器都按照不同的线程顺序运行。
|============

=== 微调队列异步处理策略

如果Mule应用了排队异步流处理策略，则可以对其进行微调以调整其行为。请注意，您只能微调排队异步策略;您无法对同步流程进行任何微调。

您可以通过以下方式微调排队异步处理策略：

* 更改可用于流的线程数。
* 限制可以排队的邮件数量。
* 指定队列存储以保存数据。

您可以通过为全局处理策略指定参数，然后引用要调整的流或参数中的参数来实现此微调。如果您没有在全局或本地级别指定某个配置参数，Mule会为该参数设置一个默认值。下表列出了这些默认值。

[NOTE]
请注意，除了微调队列异步处理策略的属性之外，您还可以通过分析和配置线程配置文件来配置Mule应用程序的 link:/mule-user-guide/v/3.5/tuning-performance[调整性能]。

以下示例定义了一个全局处理策略（`queued-asynchronous-processing-strategy`），它将最大线程数（`maxThreads`）设置为500.该示例还显示了流如何引用全局处理策略。这个流程：

* 是异步的，因为它指的是排队异步处理策略
* 允许多达500个并发线程，因为为`maxThreads`设置了值

[source, xml, linenums]
----
<queued-asynchronous-processing-strategy name="allow500Threads" maxThreads="500"/>
 
<flow name="manyThreads" processingStrategy="allow500Threads">
  <vm:inbound-endpoint path="manyThreads" exchange-pattern="one-way"/>
  <vm:outbound-endpoint path="output" exchange-pattern="one-way"/>
</flow>
----

下表列出了可以针对异步处理策略进行微调的配置参数。 （无法配置同步处理策略。）所有这些属性都可以在全局元素上配置。

[%header%autowidth.spread]
|===
|属性 |类型 |仅排队吗？ |默认值 |描述 |可选吗？
| *maxBufferSize*  |整数 |否 | 1  |确定在池达到最大容量时排队的请求数和池耗尽操作等待。该缓冲区被用作溢出。 |是
| *maxQueueSize*  |整数 |是 |不适用 |可以排队的最大消息数。 |是
| *maxThreads*  |整数 |否 | 16  |可以使用的最大线程数。 |是
| *minThreads*  |整数 |否 | n / a  |没有负载时保留在池中的空闲线程数。  |是
| *poolExhaustedAction*  |枚举 |否 | WHEN_EXHAUSTED_RUN  |当最大池大小或队列大小有界时，此值确定如何处理传入的任务。 |是的
| *queueTimeout*  |整数 |是 | n / a  |从队列中获取事件时使用的超时。 |是
| *threadTTL*  |整数 |否 | 60000  |确定非活动线程在被丢弃之前保留在池中多久。{{ 6}}是
| *threadWaitTimeout*  |整数 |否 | 30000  |当池耗尽操作等待时，以毫秒为单位等待多久。如果该值为负数，则等待时间无限。 |是
| *doThreading*  |布尔 |否 |真 |是否应使用线程 |是
|===

另外，您可以使用以下嵌套元素之一定义队列存储：

[%header%autowidth.spread]
|=======
|队列存储嵌套元素 |描述
|简单内存队列存储 |一个简单的内存队列存储。
| default-in-memory-queue-store  |这是用于非持久队列的默认队列存储。
| default-persistent-queue-store  |这是用于持久队列的默认队列存储。
| file-queue-store  |一个简单的文件队列存储。
| queue-store  |对其他地方定义的队列存储的引用。
| custom-queue-store  |使用Spring属性定义的自定义队列存储。
|=======

=== 创建一个异步处理块

如果Mule已将同步处理策略应用于流程，则可以分离出一个与主流程同时执行的处理块，并且不会将消息返回给主流程。通过以下两种方式之一实现此目的：

. 将一个或多个处理器包装在 link:/mule-user-guide/v/3.5/async-scope-reference[异步范围]中
. 通过将一个flow-ref元素封装在异步作用域中来创建一个 link:/mule-user-guide/v/3.5/flows-and-subflows[异步流程]，以便流程内容将与触发流程异步处理

这两种方法都可以阻止一组可能非常耗时执行的处理步骤。由于此异步处理块是单向的，因此主流不会等待响应，并且可以在主线程中继续处理。

如果没有为异步作用域配置处理策略，则Mule应用排队异步处理策略。但是，您可以通过定义全局元素并从async元素引用它来指定或微调该范围的异步处理策略。

以下全局元素可用于配置异步作用域的处理策略。

[%header%autowidth.spread]
|==========
|全局元素 |描述
| *asynchronous-processing-strategy*  |不适用于大多数用例。与排队异步处理策略相同（如果没有配置其他处理策略，Mule会应用这种策略），只是它不使用队列。只有在出于某种原因不希望处理分布在节点上的情况下才可以使用它。
| *queued-asynchronous-processing-strategy* a |
使用队列将流的接收器与流中其余的步骤分离。它在作用域中的工作方式与流程中的方式相同。除非另有说明，否则Mule会应用此策略。如果您想通过以下方式对此处理策略进行微调，请选择此项：

* 更改可用于流的线程数。
* 限制可以排队的邮件数量。
* 指定队列存储以保存数据。

| *queued-thread-per-processor-processing-strategy*  |不适用于大多数用例。将消息写入队列，然后作用域中的每个处理器按顺序在不同的线程中运行。
| *thread-per-processor-processing-strategy*  |不适用于大多数用例。范围中的每个处理器都按照不同的线程顺序运行。
|==========

有关配置异步作用域元素的更多信息，请参阅 link:/mule-user-guide/v/3.5/async-scope-reference[异步范围参考]。

=== 创建自定义处理策略

如果同步和排队异步处理策略都不符合您的需求，并且微调异步策略还不够，则可以创建自定义处理策略。您可以通过`custom-processing-strategy `元素创建自定义策略，并使用Spring bean属性进行配置。此自定义处理策略必须实现`org.mule.api.processor.ProcessingStrategy`接口。

以下代码示例演示了一种自定义处理策略：

[source, xml, linenums]
----
<custom-processing-strategy name="customStrategy" class="org.mule.CustomProcessingStrategy">
  <spring:property name="threads" value="500"/>
</custom-processing-strategy>
----

=== 重用处理策略

您可以在应用程序中使用命名的处理策略，既可以是您创建的自定义处理策略，也可以是经过精细调整的处理策略。

* 声明处理策略，如下所示：
+
[source, xml, linenums]
----
<queued-asynchronous-processing-strategy name="allow500Threads" maxThreads="500"/>
----

* 在适当的流程中引用它，例如：
+
[source, xml, linenums]
----
<flow name="acceptOrders" processingStrategy="allow500Threads">
  <vm:inbound-endpoint path="acceptOrders" exchange-pattern="one-way"/>
  <vm:outbound-endpoint path="commonProcessing" exchange-pattern="one-way"/>
</flow>
 
<flow name="processNewEmployee" processingStrategy="allow500Threads">
  <vm:inbound-endpoint path="processNewEmployee" exchange-pattern="one-way"/>
  <vm:outbound-endpoint path="commonProcessing" exchange-pattern="one-way"/>
</flow>
 
<flow name="receiveInvoice" processingStrategy="allow500Threads">
  <vm:inbound-endpoint path="receiveInvoice" exchange-pattern="one-way"/>
  <vm:outbound-endpoint path="commonProcessing" exchange-pattern="one-way"/>
</flow>
----

== 另请参阅

* 有关如何在其他同步流程中嵌入异步处理块的信息，请参阅 link:/mule-user-guide/v/3.5/async-scope-reference[异步范围参考]。
* 查看Mule中不同种类的 link:/mule-user-guide/v/3.5/flows-and-subflows[流量和子流量]。
* 详细了解 link:/mule-user-guide/v/3.5/reliability-patterns[可靠性模式]。
* 通过分析和配置线程配置文件了解如何配置 link:/mule-user-guide/v/3.5/tuning-performance[调整性能]。
* 查看我们的 link:https://blogs.mulesoft.com/dev/mule-dev/cheat-sheet-asynchronous-message-processing/[MuleSoft博客]上的异步消息备忘单。
